solved bug on class .truncateb

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -31,10 +31,11 @@ a {
 }
 
 .truncate {
-  width: 250px;
   white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
+  width: 250px;
+  display: block;
+  overflow: hidden
 }
 
 @media (max-width: 767px) {
